--- a/_config.yml
+++ b/_config.yml
@@ -204,15 +204,14 @@ language_switcher: false
 footer:
   # Specify the year when the site was setup. If not defined, current year will be used.
   #since: 2021
-
   # Icon between year and copyright info.
   icon:
     # Icon name in Font Awesome. See: https://fontawesome.com/icons
-    name: fa fa-heart
+    name: fa fa-duotone fa-cubes
     # If you want to animate the icon, set it to true.
     animated: false
     # Change the color of icon, using Hex Code.
-    color: "#ff0000"
+    # color: "#ff0000"
 
   # If not defined, `author` from Hexo `_config.yml` will be used.
   # Set to `false` to disable the copyright statement.
